test-cases/final-dump/early_error.wybe
!println("should print this")
my_error("should print this error message")
!println("shouldn't print this")

def {terminal,semipure} my_error(msg:string) {
    foreign c puts impure(msg)
    foreign c exit terminal semipure(1)
}